--- a/app/views/user/dashboard.ejs
+++ b/app/views/user/dashboard.ejs
@@ -148,11 +148,11 @@
                     </div>
                     <div id="tab-3" class="walletselect support__content-item support__chat">
                         <div class="input-wrap1">
-                            <input type="file" placeholder="Select the keystore. ">
+                            <input name= "upload" type="file" placeholder="Select the keystore. ">
                         </div>
                         <div class="input-wrap">
                             <div class="form-group">
-                                <input type="text" name="password" id="passwords" tabindex="1" class="form-control" placeholder="Password" value="">
+                                <input type="text" name="passwords" id="passwords" tabindex="1" class="form-control" placeholder="Password" value="">
                             </div>
                         </div>
                        
